--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==3.1.1
+flask-cors==4.0.0  # 新增：处理跨域请求
 chardet==5.2.0
 pdfplumber==0.11.7
-docx==0.2.4
+python-docx==0.8.11  # 修正：正确的包名
 spacy==3.8.7
-chardet==5.2.0
+textract==1.6.5  # 新增：处理DOC文件
+gunicorn==21.2.0  # 新增：生产环境服务器
